exports[`LikeTrigger Component When disabled Should not have UI interactions 1`] = `
<section
  className="component__like__triger">
  <svg
    className="icon"
    height="24px"
    style={
      Object {
        "display": "inline-block",
        "verticalAlign": "middle",
      }
    }
    viewBox="0 0 1024 1024"
    width="24px">
    <path
      d={undefined}
      style={
        Object {
          "fill": "#ff5a5f",
        }
      } />
  </svg>
</section>
`;

exports[`LikeTrigger Component When enabled Should change icon color on click 1`] = `
<section
  className="component__like__triger enabled"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <svg
    className="icon"
    height="24px"
    style={
      Object {
        "display": "inline-block",
        "verticalAlign": "middle",
      }
    }
    viewBox="0 0 1024 1024"
    width="24px">
    <path
      d={undefined}
      style={
        Object {
          "fill": "#c1c1c1",
        }
      } />
  </svg>
</section>
`;

exports[`LikeTrigger Component When enabled Should change icon color on hover active 1`] = `
<section
  className="component__like__triger enabled"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <svg
    className="icon"
    height="24px"
    style={
      Object {
        "display": "inline-block",
        "verticalAlign": "middle",
      }
    }
    viewBox="0 0 1024 1024"
    width="24px">
    <path
      d={undefined}
      style={
        Object {
          "fill": "#ff5a5f",
        }
      } />
  </svg>
</section>
`;

exports[`LikeTrigger Component When enabled Should undo icon color change after hover 1`] = `
<section
  className="component__like__triger enabled"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <svg
    className="icon"
    height="24px"
    style={
      Object {
        "display": "inline-block",
        "verticalAlign": "middle",
      }
    }
    viewBox="0 0 1024 1024"
    width="24px">
    <path
      d={undefined}
      style={
        Object {
          "fill": "#c1c1c1",
        }
      } />
  </svg>
</section>
`;

exports[`LikeTrigger Component should match the snapshot for initial state 1`] = `
<section
  className="component__like__triger">
  <svg
    className="icon"
    height="24px"
    style={
      Object {
        "display": "inline-block",
        "verticalAlign": "middle",
      }
    }
    viewBox="0 0 1024 1024"
    width="24px">
    <path
      d={undefined}
      style={
        Object {
          "fill": "#c1c1c1",
        }
      } />
  </svg>
</section>
`;
